--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
-#RewriteEngine on
-#RewriteCond %{HTTP_HOST} ^seu-dominio.com$ [NC,OR] RewriteCond %{HTTP_HOST} ^www.seu-dominio.com$
-#RewriteCond %{REQUEST_URI} !PHP/bloco-de-produtos/public/
-#RewriteRule (.*) /PHP/bloco-de-produtos/public/$1 [L]
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^seu-dominio.com$ [NC,OR] RewriteCond %{HTTP_HOST} ^www.seu-dominio.com$
+RewriteCond %{REQUEST_URI} !PHP/bloco-de-produtos/public/
+RewriteRule (.*) /PHP/bloco-de-produtos/public/$1 [L]
+Options -Indexes
